[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vpg"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
        'mujoco',
        'gymnasium',
        'dm-control',
        'opencv-python',
        'torch',
]

[tool.setuptools.packages.find]
include = ["vpg", "vpg.*"]